add jvm options to allow profiling